# TaikoCV

./: .gitignore  CMakeLists.txt  README.md
include/: common_math.h  globals.h  keymap.h
maps/test_map/: test_map.json  test_map_generic.json
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt
src/game/include/: action.h  audio.h  beatmap.h  game.h  game_loop.h  menu.h  results.h
src/game/src/: action.cpp  audio.cpp  beatmap.cpp  game.cpp  game_loop.cpp  menu.cpp  results.cpp
src/kernel/: CMakeLists.txt
src/kernel/include/: object.h  renderer.h  timer.h
src/kernel/src/: object.cpp  renderer.cpp  timer.cpp
src/system/: CMakeLists.txt
src/system/include/: screen.h
src/system/src/: screen.cpp
